Add projects'23 and fix old projects

--- a/_posts/2016-09-27-wifiDash.md
+++ b/_posts/2016-09-27-wifiDash.md
@@ -13,7 +13,7 @@ tags:
 - Dashboard
 categories:
 - project
-
+hidden: true  
 image:
   # url: https://github.com/abhinavtripathi95/abhinavtripathi95.github.io/blob/master/tiltviewer/imgs/w2.jpeg
 summary: "The objective of the project was to create a system for authenticating users for free WiFi and a dashboard for the management of the same."
