--- a/_posts/2016-12-23-Air-war.md
+++ b/_posts/2016-12-23-Air-war.md
@@ -8,7 +8,7 @@ tags:
  - project
 categories:
  - project
-
+hidden: true
 url: http://github.com/jaskirat1208/Windows-Game
 
 summary: "This is a single player air-fight based game built on Unity3D platform. The scripts were written in C# language using Microsoft Visual Studio"
