--- a/_posts/2016-31-07-Forex.md
+++ b/_posts/2016-31-07-Forex.md
@@ -11,7 +11,7 @@ tags:
 - ML
 categories:
 - project
-
+hidden: true
 image:
   # url: https://github.com/Sshanu/ml_HR/raw/gh-pages/neural_net2.jpeg
 
