Change relative paths of images

--- a/_posts/2016-09-25-Ml_HR.md
+++ b/_posts/2016-09-25-Ml_HR.md
@@ -13,7 +13,7 @@ categories:
 - project
 
 image:
-  url: /images/neural_net2.jpeg
+  url: /pclub-website/images/neural_net2.jpeg
 
 summary: "This project uses Neural Network Modelling  for identification of Handwriting from Optical Images."
 ---
