--- a/_posts/2016-09-27-wifiDash.md
+++ b/_posts/2016-09-27-wifiDash.md
@@ -26,7 +26,7 @@ The objective of the project was to create a system for authenticating users for
 When the user connects to the WiFi network, the user is prompted to type in his/her mobile number. The system will generate an OTP and the OTP is sent to the user via SMS. The user is prompted to enter the OTP. If the codes match, the user is then given limited access to the internet.
 
 
-![image,center](https://cdn-media-1.freecodecamp.org/images/1*4fjLFJXN544emyaBHxpTuw.png)
+![image,center](https://cdn-media-1.freecodecamp.org/pclub-website/images/1*4fjLFJXN544emyaBHxpTuw.png)
 <br>Wifi Login Portal: Authentication using Mobile Number.
 <br>Dashboard showing summary of connected devices.
 ## Tasks
