Update and rename 2025-01-05-GNU-PBDS.md to 2025-01-08-GNU-PBDS.md
changed date changed title for potential regex issue

--- a/_posts/2025-01-08-GNU-PBDS.md
+++ b/_posts/2025-01-08-GNU-PBDS.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "C++ : Policy Based Data Structures"
-date: 2025-1-05
+title: "C++ Policy Based Data Structures"
+date: 2025-1-08
 authors: Khushi Ranawat, Tattwa Shiwani
 category: events
 tags:
