adding hashmaps file

--- a/_posts/2025-03-04-hashmaps.md
+++ b/_posts/2025-03-04-hashmaps.md
@@ -22,7 +22,7 @@ Contrary to closed hashing, buckets in open hashing are numbered placeholders th
 
 Note: As of Java 8, when buckets are overpopulated(the default threshold is crossed if the number of elements is greater than 8), they are converted from linked lists to [red black trees](https://medium.com/basecs/painting-nodes-black-with-red-black-trees-60eacb2be9a5)(trees that arrange keys so that elements can be found in O(log n)).
 
-**![][image1]**  
+**![image][/images/hashmap-logic.png]**  
 It is evident from the diagram that everytime we want to read, modify or add a value, we have to access its corresponding bucket and do the required operation.
 
 **Closed Hashing(open addressing)**
@@ -66,16 +66,16 @@ As systems scale up, they generally use multicore processors to address queries.
 
 Until the 2000s, CPU performance was boosted by increasing core speeds, but this approach stalled as cores began overheating with energy consumption above 100W, leaving clock speeds stagnant. A new idea, which would prove to be much more efficient and give birth to the idea of multithreading, was to use multiple cores in a single silicon chip. With the necessary software support, each core could run a series of processes, also known as : a thread.
 
-![][image2]  
+![image][/images/hashmap-pictureOfCPU.png]  
 This is where multithreading took off. With multithreading, a computer could run multiple processes in parallel. This was very useful in multiple fields like web servers, cloud computing and faster information modification.
 
 There are 2 types of multithreading: pessimistic and optimistic. Pessimistic multithreading uses locking mechanisms(like the synchronized keyword in Java) on the data object to ensure that there is no thread that interferes with the current operation. While this approach is safe, it is only partially better than having a single thread do all the operations and has poorer performance than its optimistic counterpart.
 
 Optimistic multithreading runs all threads simultaneously. But if we allow all these threads to make changes as and when they are evaluated, we observe inconsistency in the obtained result. Take the case where a variable a is 0\. If two separate threads that increment it are called simultaneously, both threads take the initial value of a as 0 and set it to 1 individually. But a has been incremented twice and should have a value of 2(which would be the case if they were executed one after the other). This issue where the order in which threads execute affects the output is called the race condition.  
-![][image3]
+![image][/images/hashmap-parallelThreads.png]
 
 To solve this issue, Java uses the CAS(compare and swap) system. Before committing the last atomic(fundamental) operation, which happens to be assigning the variable to its new value, the algorithm checks if the existing value is equal to the value stored in the register before the value was evaluated. If it is the same, the new value is set, otherwise the operation is executed again(as it is evident another thread has already made some modifications to it) using the new values of the variable for evaluation.  
-![][image4]  
+![image][/images/hashmap-casLogic.png]  
 It is evident that when there are multiple threads that modify different locations in memory(thus reducing collisions), optimistic multithreading would be significantly more efficient than its pessimistic counterpart. Thus, modifying operations to hashmaps could be significantly sped up if they are multithreaded optimistically. In the remainder of the blog, we shall see different structures implement these kinds of multithreading.
 
 **Pessimistic model \- HashTables and Synchronized HashMaps**
