adding hashmaps file

--- a/_posts/2025-04-11-Hashmaps.md
+++ b/_posts/2025-04-11-Hashmaps.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Deep Dive into HashMaps and Multithreading"
-date: 2025-02-09 
+date: 2025-04-11 
 author: Arnav Gupta
 category: events
 tags:
@@ -11,7 +11,7 @@ tags:
 categories:
 - events
 image:
-  url: /images/SNN/snn-6.png
+  url: /images/hashmap-banner.png
 ---
 # Deep Dive into HashMaps and Multithreading
 
@@ -50,49 +50,50 @@ For the purposes of this blog, we shall focus primarily on hashmaps that use ope
 
 Clearly, there are a lot of factors in the implementation that can affect performance like:
 
-- initialCapacity: initial number of buckets(impacts memory usage)
-- loadFactor: it is the ratio of the number of elements in the map to the number of buckets. This parameter sets the limit for the load on the map instance.
+- **initialCapacity**: initial number of buckets(impacts memory usage)
+- **loadFactor**: it is the ratio of the number of elements in the map to the number of buckets. This parameter sets the limit for the load on the map instance.
 
 In order to optimize the function according to the system’s constraints (correlated to initialCapacity) and the operation’s needs (correlated to loadFactor), hashmaps can be initialized as follows:  
 ```java
 HashMap<key_type,value_type>(int initialCapacity, float loadFactor);
 ```
 
-Initially, the number of buckets in the map is set to the initialCapacity variable. As the number of key-value pairs increases, it is more likely that we have to use a bucket with a higher population. The primary metric to estimate its performance in the average scenario is load factor: the ratio of the number of elements in the map to the number of buckets.
+Initially, the number of buckets in the map is set to the initialCapacity variable. As the number of key-value pairs increases, it is more likely that we have to use a bucket with a higher population. The primary metric to estimate its performance in the average scenario is **load factor**: the ratio of the number of elements in the map to the number of buckets.
 
 ## 3) Complexity analysis  
 The space complexity of this structure is O(N) where N is the number of pairs.  
-If the hash is good(which is to say that it gives random values for different keys), we can assume that all data is evenly spread out between buckets. So, its time complexity for any operation would be O(N/B).
+If the hash is good(which is to say that it gives random values for different keys), we can assume that all data is evenly spread out between buckets. So, its time complexity for any operation would be **O(N/B)**.
 
-**So do operations on HashMaps take linear time?**  
-No.  
+### So do operations on HashMaps take linear time? 
+**No.** 
+
 Notice that N is divided by the number of buckets. This value scales with N.  
 Every time the load factor of the hashmap instance crosses the limit that we set on it, the hashmap goes through a process called rehashing, wherein it doubles the number of buckets and reallocates all the key value pairs to their buckets and leaves out all deleted keys to prevent a memory leak.
 
-So, the time complexity is actually O(loadFactor).
+So, the time complexity is actually **O(loadFactor)**.
 
 Note: This only happens only if the hash function is good enough to distribute the keys equally or almost equally. If the hash is bad, it is possible that all keys get added to the same bucket. As a result, the time complexity for a single search or add operation can go up to O(N).
 
 So, a high load factor causes a high time complexity but decreases space required while a low load factor causes the hashmap to take up more space but has a lesser lookup cost. In general a load factor of .75 balances both these aspects pretty well.
 
-Though this process may seem expensive, notice that it happens only when the number of elements doubles after the previous rehash. So, the total complexity of all rehash calls will look something like O(N+N/2+N/4+N/8…) which is \~O(N) in the overall use of the structure.
+Though rehashing may seem expensive, notice that it happens only when the number of elements doubles after the previous rehash. So, the total complexity of all rehash calls will look something like **O(N+N/2+N/4+N/8…)** which is **\~O(N)** in the overall use of the structure.
 
 This is actually pretty good as even the add function which is constant in time takes O(N) time to add all N pairs.
 
 ## 4) Basics of multithreading and CAS 
 As systems scale up, they generally use multicore processors to address queries. Before discussing how HashMaps handle multiple requests at the same time, first let’s go over the basics of multithreading and how it works in Java.
 
-Until the 2000s, CPU performance was boosted by increasing core speeds, but this approach stalled as cores began overheating with energy consumption above 100W, leaving clock speeds stagnant. A new idea, which would prove to be much more efficient and give birth to the idea of multithreading, was to use multiple cores in a single silicon chip. With the necessary software support, each core could run a series of processes, also known as : a thread.
+Until the 2000s, CPU performance was boosted by increasing core speeds, but this approach stalled as cores began overheating with energy consumption above 100W, leaving clock speeds stagnant. A new idea, which would prove to be much more efficient and give birth to the idea of multithreading, was to use multiple cores in a single silicon chip. With the necessary software support, each core could run a series of processes, also known as : a **thread**.
 
 ![image](/images/hashmap-pictureOfCPU.png)
 This is where multithreading took off. With multithreading, a computer could run multiple processes in parallel. This was very useful in multiple fields like web servers, cloud computing and faster information modification.
 
-There are 2 types of multithreading: pessimistic and optimistic. Pessimistic multithreading uses locking mechanisms(like the synchronized keyword in Java) on the data object to ensure that there is no thread that interferes with the current operation. While this approach is safe, it is only partially better than having a single thread do all the operations and has poorer performance than its optimistic counterpart.
+There are 2 types of multithreading: **pessimistic and optimistic**. Pessimistic multithreading uses locking mechanisms(like the synchronized keyword in Java) on the data object to ensure that there is no thread that interferes with the current operation. While this approach is safe, it is only partially better than having a single thread do all the operations and has poorer performance than its optimistic counterpart.
 
-Optimistic multithreading runs all threads simultaneously. But if we allow all these threads to make changes as and when they are evaluated, we observe inconsistency in the obtained result. Take the case where a variable a is 0. If two separate threads that increment it are called simultaneously, both threads take the initial value of a as 0 and set it to 1 individually. But a has been incremented twice and should have a value of 2(which would be the case if they were executed one after the other). This issue where the order in which threads execute affects the output is called the race condition.  
+Optimistic multithreading runs all threads simultaneously. But if we allow all these threads to make changes as and when they are evaluated, we observe inconsistency in the obtained result. Take the case where a variable a is 0. If two separate threads that increment it are called simultaneously, both threads take the initial value of a as 0 and set it to 1 individually. But a has been incremented twice and should have a value of 2(which would be the case if they were executed one after the other). This issue where the order in which threads execute affects the output is called the **race condition**.  
 ![image](/images/hashmap-parallelThreads.png)
 
-To solve this issue, Java uses the CAS(compare and swap) system. Before committing the last atomic(fundamental) operation, which happens to be assigning the variable to its new value, the algorithm checks if the existing value is equal to the value stored in the register before the value was evaluated. If it is the same, the new value is set, otherwise the operation is executed again(as it is evident another thread has already made some modifications to it) using the new values of the variable for evaluation.  
+To solve this issue, Java uses the **CAS(compare and swap)** system. Before committing the last atomic(fundamental) operation, which happens to be assigning the variable to its new value, the algorithm checks if the existing value is equal to the value stored in the register before the value was evaluated. If it is the same, the new value is set, otherwise the operation is executed again(as it is evident another thread has already made some modifications to it) using the new values of the variable for evaluation.  
 ![image](/images/hashmap-casLogic.png)
 It is evident that when there are multiple threads that modify different locations in memory(thus reducing collisions), optimistic multithreading would be significantly more efficient than its pessimistic counterpart. Thus, modifying operations to hashmaps could be significantly sped up if they are multithreaded optimistically. In the remainder of the blog, we shall see different structures implement these kinds of multithreading.
 
@@ -138,7 +139,7 @@ While reading, the older table is first accessed to get the key value pair. If t
 
 Modification operations use the new table.  
 #### But how does the resize operation ensure that it does not override any modifications in the new table? 
-![image][/images/hashmap-nbhm-copying.png]  
+![image](/images/hashmap-nbhm-copying.png)  
 Here $V’$(known as primed value) stands for the value associated with K that was copied from the old table to the new table.  
 Primed values essentially serve as an indicator that the copy has not finished. Internally it is ensured that the system can tell primed values and actual values apart, i.e $V_1’$ and $V_1$ are distinct states by simply using an indicator for the same(a particular bit or a particular object).  
 Initially the value in the new table is set to $V_x’$.  
