Roadmap Updates and Blog Credits

--- a/_posts/2025-01-08-GNU-PBDS.md
+++ b/_posts/2025-01-08-GNU-PBDS.md
@@ -227,7 +227,7 @@ Each of these implementations comes with its own perks and specific use cases, o
 using namespace __gnu_pbds;
 
 // replace thin_heap with the <tag> of your choice
-typename __gnu_pbds::priority_queue<int, less<int>, thin_heap_tag> myPQ;
+typedef priority_queue<int, less<int>, thin_heap_tag> myPQ;
 ```
 
 #### Methods
@@ -375,7 +375,7 @@ int main() {
 ## pb_ds in Action
 
 #### 1) Count Number of Inversions in an Array
-Using `ordered_set`
+Using `ordered_set`. Note the use of `less_equal<int>` comparator, essentially making it an `ordered_multiset`.
 ```cpp
 #include <bits/stdc++.h>
 using namespace std;
@@ -384,7 +384,7 @@ using namespace std;
 #include <ext/pb_ds/tree_policy.hpp>
 using namespace __gnu_pbds;
 
-typedef tree<int, null_type, less<int>, rb_tree_tag, tree_order_statistics_node_update> ordered_set;
+typedef tree<int, null_type, less_equal<int>, rb_tree_tag, tree_order_statistics_node_update> ordered_set;
 
 int countInversions(vector<int>& arr) {
     ordered_set os;
@@ -535,6 +535,8 @@ These are some more [examples](https://github.com/gcc-mirror/gcc/tree/master/lib
 ### Conclusion
 pb\_ds is a treasure trove for competitive programmers. It saves time, simplifies code, and enables you to focus on solving problems rather than debugging custom data structures. With its variety of priority queue implementations, tree-based containers, hash-based structures and many more, it’s a must-have tool in your arsenal.
 Thank you!
+
+_Authors: Tattwa Shiwani, Khushi Ranawat
 
 ### References :
 
